--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,14 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess-cover.png");
 }
 
+#firstname-lastname-cover {
+    background-image: url("https://i.imgur.com/8gA7JMT.jpg");
+  }
+ 
+  #firstname-lastname-card {
+    background-image: url("link to my imgur card photo");
+  }
+
 #avi-flombaum-card {
 }
 
