automatically backed up by learn

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,12 +141,12 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess-cover.png");
 }
 
-#firstname-lastname-cover {
+#samantha-brake-cover {
     background-image: url("https://i.imgur.com/8gA7JMT.jpg");
   }
- 
-  #firstname-lastname-card {
-    background-image: url("link to my imgur card photo");
+
+  #samantha-brake-card {
+    background-image: url("https://i.imgur.com/JgRBPEy.jpg");
   }
 
 #avi-flombaum-card {
