--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ a:visited {
 }
 
 #samantha-brake-cover {
-    background-image: url("https://i.imgur.com/8gA7JMT.jpg");
+    background-image: url("https://i.imgur.com/ZNZhOpt.jpg");
   }
 
   #samantha-brake-card {
