--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,14 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/joe-burgess-cover.png");
 }
 
+#samantha-brake-cover {
+    background-image: url("https://i.imgur.com/ZNZhOpt.jpg");
+  }
+
+  #samantha-brake-card {
+    background-image: url("https://i.imgur.com/JgRBPEy.jpg");
+  }
+
 #avi-flombaum-card {
 }
 
